# ai-doc-chatbot

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
src/: rag_pipeline.py
src/config/: config.py
src/document_ingestion/: document_processor.py
